syntax = "proto3";
package apocryph.proto.sample;

option go_package = "github.com/comrade-coop/trusted-pods/pkg/proto";

service sample{
		rpc SendPod(SampleProvisionPodRequest) returns (SampleProvisionPodReply);
}
message SampleProvisionPodRequest{
		string cid =1;
}
message SampleProvisionPodReply{
		string endpoint =1;
}

